<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/bg_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1.6">

        <TextView
            android:id="@+id/txv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/textCustom"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@id/txv_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/str_date"/>

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/textCustom"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintEnd_toStartOf="@id/txv_value"
            app:layout_constraintStart_toEndOf="@id/txv_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/str_op"/>

        <TextView
            android:id="@+id/txv_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/textCustom"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toEndOf="@id/txv_type"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txv_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/str_value"/>

        <TextView
            android:id="@+id/txv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/textCustom"
            app:layout_constraintStart_toEndOf="@id/txv_value"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/str_description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_report"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/recycle_list_extract"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_header"
        app:layout_constraintVertical_weight="7.8" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/recycle_report"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="2.5">

        <TextView
            android:id="@+id/txv_e_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/str_e_delivery"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txv_p_payment"
            app:layout_constraintStart_toStartOf="@id/txv_p_payment"/>

        <TextView
            android:id="@+id/txv_p_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/str_p_payment"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_show_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/str_show_delivery"
            style="@style/buttonCustom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_show_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/str_show_payment"
            style="@style/buttonCustom"
            app:layout_constraintStart_toEndOf="@id/btn_show_delivery"
            app:layout_constraintTop_toTopOf="@id/btn_show_delivery"/>

        <Button
            android:id="@+id/btn_show_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/str_show_all"
            style="@style/buttonCustom"
            app:layout_constraintStart_toEndOf="@id/btn_show_payment"
            app:layout_constraintTop_toTopOf="@id/btn_show_delivery"/>

        <TextView
            android:id="@+id/txv_partial_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toTopOf="@+id/btn_insert"
            app:layout_constraintEnd_toEndOf="@id/btn_insert"
            tools:text="R$:0,00" />

        <TextView
            android:id="@+id/txv_partial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/str_tot"
            app:layout_constraintEnd_toStartOf="@id/txv_partial_value"
            app:layout_constraintTop_toTopOf="@id/txv_partial_value"
            app:layout_constraintBottom_toBottomOf="@id/txv_partial_value"/>

        <Button
            android:id="@+id/btn_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/baseline_add_24"
            android:text="@string/str_insert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>